--- a/ShikiApi/ShikiApi.csproj
+++ b/ShikiApi/ShikiApi.csproj
@@ -49,9 +49,11 @@
     <Compile Include="Attributes\RequestAttribute.cs" />
     <Compile Include="Attributes\StringAttribute.cs" />
     <Compile Include="Extensions\Enum.cs" />
+    <Compile Include="Extensions\FranchiseNodesToAnimesExtension.cs" />
     <Compile Include="Extensions\RequestExtension.cs" />
     <Compile Include="Extensions\JSONExtensions.cs" />
     <Compile Include="Extensions\ListKeyValuePairExtension.cs" />
+    <Compile Include="Extensions\UserListToAnimeListExtension.cs" />
     <Compile Include="JSONWriter\AnimeVideoWriterExtension.cs" />
     <Compile Include="JSONWriter\KeyValuePairsWriterExtension.cs" />
     <Compile Include="JSONWriter\UserListItemRequestWriterExtension.cs" />
@@ -61,29 +63,52 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShikiQuery.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
-    <Compile Include="Structs\AnimeInfo.cs" />
-    <Compile Include="Structs\AnimeRole.cs" />
-    <Compile Include="Structs\AnimeVideo.cs" />
-    <Compile Include="Structs\BanInfo.cs" />
-    <Compile Include="Structs\CalendarInfo.cs" />
-    <Compile Include="Structs\Character.cs" />
-    <Compile Include="Structs\CharacterInfo.cs" />
-    <Compile Include="Structs\Club.cs" />
-    <Compile Include="Structs\ClubInfo.cs" />
-    <Compile Include="Structs\Comment.cs" />
-    <Compile Include="Structs\CommentInfo.cs" />
+    <Compile Include="Structs\Achievements.cs" />
+    <Compile Include="Structs\Anime\AnimeFranchise.cs" />
+    <Compile Include="Structs\Anime\AnimeFranchiseLink.cs" />
+    <Compile Include="Structs\Anime\AnimeFranchiseNode.cs" />
+    <Compile Include="Structs\Anime\AnimeInfo.cs" />
+    <Compile Include="Structs\Anime\AnimeRole.cs" />
+    <Compile Include="JsonConverters\PersonGrouppedRoleConverter.cs" />
+    <Compile Include="Structs\Character\PersonGrouppedRole.cs" />
+    <Compile Include="Structs\Character\PersonInfo.cs" />
+    <Compile Include="Structs\Character\PersonWork.cs" />
+    <Compile Include="Structs\Enums\TopicType.cs" />
+    <Compile Include="Structs\Message\Message.cs" />
+    <Compile Include="Structs\Message\MessagePrivacyType.cs" />
+    <Compile Include="Structs\Message\MessagesCount.cs" />
+    <Compile Include="Structs\Message\MessageType.cs" />
+    <Compile Include="Structs\Requests\MessageCreateRequest.cs" />
+    <Compile Include="Structs\Requests\TopicListRequest.cs" />
+    <Compile Include="Structs\Style\Style.cs" />
+    <Compile Include="Structs\Enums\StyleOwnerType.cs" />
+    <Compile Include="Structs\Style\StyleCreateRequest.cs" />
+    <Compile Include="Structs\Style\StyleUpdateRequest.cs" />
+    <Compile Include="Structs\Topic\Topic.cs" />
+    <Compile Include="Structs\Topic\TopicInfo.cs" />
+    <Compile Include="Structs\Topic\TopicLinkedType.cs" />
+    <Compile Include="Structs\Video\AnimeVideo.cs" />
+    <Compile Include="Structs\Ban\BanInfo.cs" />
+    <Compile Include="Structs\Calendar\CalendarInfo.cs" />
+    <Compile Include="Structs\Character\Character.cs" />
+    <Compile Include="Structs\Character\CharacterInfo.cs" />
+    <Compile Include="Structs\Club\Club.cs" />
+    <Compile Include="Structs\Club\ClubInfo.cs" />
+    <Compile Include="Structs\Comment\Comment.cs" />
+    <Compile Include="Structs\Comment\CommentInfo.cs" />
     <Compile Include="Structs\Enums\AnimeDuration.cs" />
     <Compile Include="Structs\Enums\AnimeVideoKind.cs" />
     <Compile Include="Structs\Enums\ClubCommentPolicy.cs" />
     <Compile Include="Structs\Enums\ClubJoinPolicy.cs" />
     <Compile Include="Structs\Enums\ClubPolicy.cs" />
+    <Compile Include="Structs\Enums\CommentableType.cs" />
     <Compile Include="Structs\Enums\MangaKind.cs" />
     <Compile Include="Structs\Enums\Rating.cs" />
     <Compile Include="Structs\Enums\ClubUserRole.cs" />
     <Compile Include="Structs\ExternalLink.cs" />
-    <Compile Include="Structs\Manga.cs" />
-    <Compile Include="Structs\MangaInfo.cs" />
-    <Compile Include="Structs\MangaRole.cs" />
+    <Compile Include="Structs\Manga\Manga.cs" />
+    <Compile Include="Structs\Manga\MangaInfo.cs" />
+    <Compile Include="Structs\Manga\MangaRole.cs" />
     <Compile Include="Structs\Pickers\StudioPicker.cs" />
     <Compile Include="Structs\Publisher.cs" />
     <Compile Include="Structs\RelatedTitle.cs" />
@@ -91,22 +116,27 @@
     <Compile Include="Structs\Enums\Season.cs" />
     <Compile Include="Structs\Genre.cs" />
     <Compile Include="Structs\Requests\ClubUpdateRequest.cs" />
+    <Compile Include="Structs\Requests\CommentCreationRequest.cs" />
+    <Compile Include="Structs\Requests\CommentRequest.cs" />
+    <Compile Include="Structs\Requests\MangaListRequest.cs" />
     <Compile Include="Structs\Requests\Request.cs" />
     <Compile Include="Structs\Requests\SearchRequest.cs" />
-    <Compile Include="Structs\Role.cs" />
-    <Compile Include="Structs\Seyu.cs" />
+    <Compile Include="Structs\Requests\TitleListRequest.cs" />
+    <Compile Include="Structs\Requests\BaseRequest.cs" />
+    <Compile Include="Structs\Character\Role.cs" />
+    <Compile Include="Structs\Character\Seyu.cs" />
     <Compile Include="Structs\Studio.cs" />
     <Compile Include="Structs\Pickers\AnimeKindPicker.cs" />
     <Compile Include="Structs\Pickers\GenersPicker.cs" />
     <Compile Include="Structs\Pickers\IdsPicker.cs" />
     <Compile Include="Structs\Pickers\SeasonPicker.cs" />
     <Compile Include="Structs\Enums\AbuseRequestKind.cs" />
-    <Compile Include="Structs\Anime.cs" />
+    <Compile Include="Structs\Anime\Anime.cs" />
     <Compile Include="Structs\Requests\AnimeListRequest.cs" />
-    <Compile Include="Structs\AnimeSeriesVideo.cs" />
+    <Compile Include="Structs\Video\AnimeSeriesVideo.cs" />
     <Compile Include="Structs\Response\AnimeSeriesVideoResponse.cs" />
     <Compile Include="Structs\Enums\AnimeKindRequest.cs" />
-    <Compile Include="Structs\Enums\AnimeOrder.cs" />
+    <Compile Include="Structs\Enums\ListOrder.cs" />
     <Compile Include="Structs\Enums\AnimeSeriesVideoKind.cs" />
     <Compile Include="Structs\Enums\AnimeSeriesVideoLanguage.cs" />
     <Compile Include="Structs\Enums\AnimeSeriesVideoQuality.cs" />
@@ -121,10 +151,16 @@
     <Compile Include="Structs\Enums\TypeOfTitle.cs" />
     <Compile Include="Structs\Response\TopicIgnoreResponse.cs" />
     <Compile Include="Structs\Supported\TitleScreenshot.cs" />
-    <Compile Include="Structs\User.cs" />
-    <Compile Include="Structs\UserListItem.cs" />
+    <Compile Include="Structs\User\User.cs" />
+    <Compile Include="Structs\User\UserFavorites.cs" />
+    <Compile Include="Structs\User\UserInfo.cs" />
+    <Compile Include="Structs\User\UserInfoFullStatuses.cs" />
+    <Compile Include="Structs\User\UserInfoStats.cs" />
+    <Compile Include="Structs\User\UserInfoStatuses.cs" />
+    <Compile Include="Structs\User\UserInfoValues.cs" />
+    <Compile Include="Structs\User\UserListItem.cs" />
     <Compile Include="Structs\Requests\UserListItemRequest.cs" />
-    <Compile Include="Structs\UserScore.cs" />
+    <Compile Include="Structs\User\UserValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
