--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/ShikiApi_Tests/UserData.resx
+/ShikiApi_Tests/UserData.Designer.cs
